# boba-cup-checker

./: .gitignore  CMakeLists.txt  CamManager.cpp  ColorFinder.cpp  camera_manager.py  color_finder.py  install.sh  main.cpp  main.py  readme.md
cpp/: CamManager.cpp  CamManager.h  ColorFinder.h  VisionCommon.h  main.cpp
